Normalized navigation between pages (details page yet to be done) Several fixes on iOS and Android

--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -101,7 +101,7 @@ ion-header .toolbar_header .close_toolbar.bar-button {
 }
 
 ion-header .toolbar_header ion-buttons {
-  width: 80px;
+  width: 40px;
 }
 
 ion-header .toolbar_header .close_toolbar .button-inner {
@@ -118,11 +118,11 @@ ion-header .toolbar_header .button-inner > ion-icon {
   font-size: 2.6rem;
 }
 
-ion-header .toolbar_header .close_toolbar .button-inner > div {
-  max-width: 80px;
-  overflow: hidden;
-  text-overflow: ellipsis;
-  white-space: nowrap;
-  font-size: 12px;
-  text-transform: none;
-}
+//ion-header .toolbar_header .close_toolbar .button-inner > div {
+//  max-width: 80px;
+//  overflow: hidden;
+//  text-overflow: ellipsis;
+//  white-space: nowrap;
+//  font-size: 12px;
+//  text-transform: none;
+//}
